# pc-code

./: package-lock.json  pyproject.toml
AndroidStudio/app/: build.gradle
DiscordJS/Abbi-V2/: index.js
DiscordJS/Abbi-V2-Nodejs/: botconfig.json  colours.json  package-lock.json
DiscordJS/abbi/: index.js  package.json
Godot/: control.tscn  icon.svg.import  project.godot
NEAPizzaApp/: settings.gradle.kts
Python/: 100m sprint.py  Fail.py  Minicraft.py  Python Club.py  Random stuff.py  Spud Test.py  Test.py  TheDragonFiles.py  alien.py  converter.py  craftingGame.py  dice.py  ghostgame.py  manerium 1.2.3.py  pygame test.py  pysimpleguimodule.py  snakeTemplate.py  testingKivy.py  timemodule.py  tkinterThings.py  turtle.py
python-pc-code/: pyproject.toml
python-pc-code/202X Python/2022/mk8d tools/: characterStats.csv  helpQuestion.txt
python-pc-code/202X Python/2023/: .env
python-pc-code/202X Python/2023/mtgDiscordBot/: pyproject.toml
python-pc-code/202X Python/2023/mtgDiscordBot/mtgdiscordbot/cogs/: mtg.py
python-pc-code/202X Python/abbi.py/: dotos.py
python-pc-code/202X Python/abbi.py/cogs/: beemovie.py
python-pc-code/202X Python/adventofcode2020/day1/Python-3.8.2/Programs/: _testembed.gcda
python-pc-code/202X Python/mtgSearchProject/: mtgSearchFrontend.py
python-pc-code/202X Python/mtgSearchProject/bot/: index.py
python-pc-code/202X Python/mtgSearchProject/scrython test/: scrythontest.py
python-pc-code/CSWork/: palindromeChecker.py
python-pc-code/addressBook/: main.py
python-pc-code/webscraping/: bbcwebscraper.py
(+195 files in other folders)
