[tool.poetry]
name = "pc-code"
version = "0.1.0"
description = ""
authors = ["traditionallimb <dom@kalowe.me.uk>"]
readme = "README.md"
packages = [{include = "pc_code"}]

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
